<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="216dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="16dp">

    <ImageView
        android:id="@+id/imgFeedPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/feed_image_desc"
        android:scaleType="centerCrop" />

    <ProgressBar
        android:id="@+id/progressBarLoadingFeed"
        android:layout_width="@dimen/progress_size"
        android:layout_height="@dimen/progress_size"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFeedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/core_sans_c_55"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="6sp"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFeedDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/core_sans_c_55"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="6sp"
                android:textColor="@color/white" />

            <ImageButton
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/image_button_back"
                android:contentDescription="@string/dot" />

            <TextView
                android:id="@+id/tvFeedDaysAgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/core_sans_c_55"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="6sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="@dimen/small_image_button_size"
        android:layout_height="@dimen/small_image_button_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="@drawable/white_transparent_back"
        android:contentDescription="@string/feed_more_desc"
        android:src="@drawable/ic_more" />

    <FrameLayout
        android:id="@+id/rootLayoutLiked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/white_transparent_back"
        android:elevation="16dp"
        android:padding="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>
</androidx.cardview.widget.CardView>